<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quotzy</string>
    <string name="title_activity_main" tools:keep="@string/title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open" tools:keep="@string/navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:keep="@string/navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_quotes_available">No Quotes Available</string>
    <string name="search_quotes_by_author" tools:keep="@string/search_quotes_by_author">Funny,gandhi..etc</string>
    <string name="quotes_body_transistion">quotebodytransistion</string>
    <string name="quotes_author_transistion">quoteauthortransistion</string>
    <string name="Unable_to_save_share_image">Error in sharing item</string>
    <string name="image_saved" tools:keep="@string/image_saved">Congratulations,Image has been saved to sdcard/Pictures</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Quotes">Quotes</string>
    <string name="Facts" tools:keep="@string/Facts">Facts</string>
    <string name="Poems" tools:keep="@string/Poems">Poems</string>
    <string name="meme" tools:keep="@string/meme">Meme</string>
    <string name="close">Close</string>
    <string name="warning">Warning</string>
    <string name="select_what" tools:keep="@string/select_what">Choose what you want to create</string>
    <string name="background">Background</string>
    <string name="Text">Text</string>
    <string name="done">Done</string>
    <string name="coming_soon" tools:keep="@string/coming_soon">Coming Soon.</string>
    <string name="enter_text">Enter your text below</string>
    <string name="please_select_text">Please, select any text layer to apply features</string>
    <string name="please_select_text_to_delete">Please, select any layer to delete</string>
    <string name="are_you_sure">Alert </string>
    <string name="this_will_delete">Are you sure want to delete the selected item permenantly</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sorry">Sorry,this feature is not available for your device</string>
    <string name="align">Align text</string>
    <string name="start">Start</string>
    <string name="center">Center</string>
    <string name="end">End</string>
    <string name="please_enter">Please, Enter something to add</string>
    <string name="choose_color">Choose color to apply</string>
    <string name="choose">Apply</string>
    <string name="select_colors_apply">Select any color to apply</string>
    <string name="apply_shadow">Apply shadow to text</string>
    <string name="shadow">Shadow Text</string>
    <string name="opacity">Opacity</string>
    <string name="radius">Shadow radius</string>
    <string name="x_pos">Shadow X distance</string>
    <string name="y_pos">Shadow Y distance</string>
    <string name="shadow_color">Shadow color</string>
    <string name="apply">Apply</string>
    <string name="local_fonts">Local fonts</string>
    <string name="symbol_fonts">Symbol fonts</string>
    <string name="downloaded_fonts">Your fonts</string>
    <string name="app_fonts">App fonts</string>
    <string name="download_fonts">Online fonts</string>
    <string name="symbolic_fonts">Downloaded fonts</string>
    <string name="select_font">Select any font style to apply.</string>
    <string name="clear">Clear selection</string>
    <string name="permission_comulsory" tools:keep="@string/permission_comulsory">Permission is mandatory for editing pictures.</string>
    <string name="permission_" tools:keep="@string/permission_">Please,give permission to use features.</string>
    <string name="operation_failed" tools:keep="@string/operation_failed">Operation failed</string>
    <string name="permissin_granted">Permission granted now you can use the feature.</string>
    <string name="no_work">Nothing found,Click to show your creativity</string>
    <string name="no_permission">Storage permission not granted. Click to grant.</string>
    <string name="set_wallpaer">Set Wall</string>
    <string name="share">Share</string>
    <string name="Resolution">Image Resolution: %1$d x %2$d</string>
    <string name="Path">File location : %1$s</string>
    <string name="size">Size : %1$d kb</string>
    <string name="unable">Unable to delete</string>
    <string name="deleted">Image has been deleted</string>
    <string name="image_unavailable">Image not available</string>
    <string name="categories">Category</string>
    <string name="Fav">Likes</string>
    <string name="Work">Works</string>
    <string name="please_select_image">Please add any image as background to apply blurr feature.</string>
    <string name="Gradient">Gradients</string>
    <string name="preview">Preview Gradient</string>
    <string name="select_to_apply">Select any color to use or change</string>
    <string name="are_you_sure_close">Do you want to close the app?</string>
    <string name="jpg">JPG</string>
    <string name="png">PNG</string>
    <string name="Qotzy">Quotzy</string>
    <string name="Quotzy">Quotzy</string>
    <string name="project">Save Project</string>
    <string name="save">Save</string>
    <string name="please_enter_project_name">Enter Project name to save</string>
    <string name="Category_Name">Category</string>
    <string name="wallpaper_description">Some Demo Description</string>
    <string name="Launch">Launch</string>
    <string name="Skip">Skip</string>
    <string name="Previous">Previous</string>
    <string name="backgroundColor">BG color</string>
    <string name="bold">Bold</string>
    <string name="underline">U-line</string>
    <string name="italic">Italic</string>
    <string name="color">Color</string>
    <string name="highlight">highlight</string>
    <string name="strike">Strike through</string>
    <string name="edit_text">Edit Text</string>
    <string name="format">Format Text</string>
    <string name="made_with_quotzy" tools:keep="@string/made_with_quotzy">Made with Quotzy</string>
    <string name="bannerAdId">ca-app-pub-9653011938091807/9510392856</string>
    <string name="rewardAdId">ca-app-pub-9653011938091807/9302547281</string>
    <string name="watermark">RemoveWatermark</string>
    <string name="WatchAd">🙏🙏🙏🙏🙏Watch ad to support us🙏🙏🙏🙏🙏</string>
    <string name="pro">Buy Pro</string>
    <string name="gradient">Gradient Text</string>
    <string name="Linear">Linear</string>
    <string name="radial">Radial</string>
    <string name="LaunchGa">Launch Gallery</string>
    <string name="CenterCrop">CenterCrop</string>
    <string name="FitC">FitCenter</string>
    <string name="None">None</string>
    <string name="Select_how_to_fit">Please, selecte image fitype before apply image as background.</string>
    <string name="type_gra">Gradient Type</string>
    <string name="previewGra">Preview Gradient text</string>
    <string name="selecte_gradient_to_apply" tools:keep="@string/selecte_gradient_to_apply">Select the gradient style to apply it.</string>
    <string name="no_images">Sorry,No images are available</string>
    <string name="Image_search">Image Search</string>
    <string name="credits">Images are powered by www.pixabay.com</string>
    <string name="enter_search">Nature,pets,Romantic etc..</string>
    <string name="canvas_size">Canvas Size</string>
    <string name="install_fonts">Install all fonts</string>
    <string name="dont_forget">Dont forget to read the font Licenses in your downloaded folder</string>
    <string name="Fonts">Fonts</string>
    <string name="install">Install</string>
    <string name="font_installed">Congratulations, Font installed Start using it</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="installing_Fonts">Installing Fonts</string>
    <string name="invalid_family_name">Font file unavailable</string>
    <string name="font_not_downloaded">Font download failed</string>
    <string name="internet_required">Internet required to download the fonts from server</string>
    <string name="images">Images</string>
    <string name="VFX">VFX</string>
    <string name="light_Direction">Source light direction</string>
    <string name="light">Light</string>
    <string name="blurr_radius">Blurr radius</string>
    <string name="Hollow">Hollow Text</string>
    <string name="dash_width">Dash Width</string>
    <string name="Layout">Layout</string>
    <string name="Look_and_feel" tools:keep="@string/Look_and_feel">Look and feel</string>
    <string name="Advanced" tools:keep="@string/Advanced">Advanced</string>
    <string name="layout_changes">Configure how widget looks</string>
    <string name="layout">Layout</string>
    <string name="Widget_layout">Widget layout</string>
    <string name="show_author_name">Hide Author Name</string>
    <string name="widget_shared_prefs_show_author_key">Show_author_shared_prefs_key</string>
    <string name="widget_shared_prefs_layout_size_key">shared_prefs_layout_size_key</string>
    <string name="quotes_to_load">Show Quotes from</string>
    <string name="widget_shared_prefs_quotes_resource_key">shared_prefs_quotes_key</string>
    <string name="Load_quotes">Load Quotes</string>
    <string name="Selecte_where_to_lo">Select the Quotes source</string>
    <string name="apperance">Widget appearance</string>
    <string name="widget_shared_prefs_show_quotes_mark_key">widget_shared_prefs_show_quote_key</string>
    <string name="show_quotes_mark">Show Quotes Mark</string>
    <string name="widget_shared_prefs_background_key">Widget_background_color_key</string>
    <string name="widget_shared_prefs_text_key">shared_prefs_text_color_key</string>
    <string name="Update">Update Quotes</string>
    <string name="widget_update">Widget Update Frequency</string>
    <string name="widget_shared_prefs_update_key">shared_prefs_widget_quote_update_frequency_key</string>
    <string name="choose_time_gap">Choose quote update frequency</string>
    <string name="widget_added_key">shared_prefs_is_widget_added_key</string>
    <string name="Wallpaper">Wallpaper</string>
    <string name="Listener">Deaf listener found</string>
    <string name="Failed">Failed,Please Try Again</string>
    <string name="Currently_no_wallpaper">Currently no wallpapers available</string>
    <string name="regular">Regular</string>
    <string name="UHD">U-HD</string>
    <string name="HD">HD</string>
    <string name="need_internet_hd">Internet is required to download Hd image</string>
    <string name="visit_profile">Visit Unsplash Profile</string>
    <string name="writetous">Write to us</string>
    <string name="credits_menu">Credits</string>
    <string name="about">About us</string>
    <string name="search_hint" tools:keep="@string/search_hint">Type here</string>
    <string name="where_to_search">Choose what search is for</string>
    <string name="beta">Beta features</string>
    <string name="rate_us">Rate us</string>
    <string name="fonts">Fonts</string>
    <string name="font_confession">All in app fonts are downloaded from web and Dafont.com ,Editor fonts are provided by google api ,if you want to use your custom fonts please dont forget to read TnC</string>
    <string name="Image_confession">All images are provided by Unsplash.com and the Editor search images are provided by pixabay.com </string>
    <string name="Quote_confession">All quotes you can see in this app are Collected from internet</string>
    <string name="Icons">Icons</string>
    <string name="Icon_confession">All icons are downloaded from internet and Flaticon.com</string>
    <string name="collections">Collections</string>
    <string name="library">Library</string>
</resources>