<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="@string/layout_changes"
        android:title="@string/layout">
        <CheckBoxPreference
            android:key="@string/widget_shared_prefs_show_author_key"
            android:title="@string/show_author_name" />
        <ListPreference

            android:summary="@string/Selecte_where_to_lo"
            android:title="@string/Load_quotes" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/apperance"
        android:title="@string/apperance">
        <CheckBoxPreference
            android:key="@string/widget_shared_prefs_show_quotes_mark_key"
            android:title="@string/show_quotes_mark" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/background">
        <CheckBoxPreference
            android:icon="@drawable/ic_colors_bg"
            android:key="@string/widget_shared_prefs_background_key"
            android:summary="@string/choose_color"
            android:title="@string/backgroundColor">

        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Text">
        <CheckBoxPreference
            android:icon="@drawable/ic_format_color_text_black_24dp"
            android:key="@string/widget_shared_prefs_text_key"
            android:selectable="true"
            android:summary="@string/choose_color"
            android:title="@string/color">

        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Update">
        <ListPreference
            android:entries="@array/Quotes_update_widget"
            android:entryValues="@array/Quotes_update_vals"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:key="@string/widget_shared_prefs_update_key"
            android:summary="@string/choose_time_gap"
            android:title="@string/widget_update"/>


    </PreferenceCategory>
    <!--android:dialogTitle="@string/images_to_load"-->
    <!--android:entries="@array/Quotes_for_wallpaers"-->
    <!--android:entryValues="@array/Quotes_for_wallpaer_vals"-->
    <!--android:key="@string/wallpaper_shared_prefs_quotes_resource_key"-->
</PreferenceScreen>