<?xml version="1.0" encoding="utf-8"?> <!--/*   Copyright [2018] [Sayi Manoj Sugavasi]   Licensed under the Apache License, Version 2.0 (the "License");   you may not use this file except in compliance with the License.   You may obtain a copy of the License at       http://www.apache.org/licenses/LICENSE-2.0   Unless required by applicable law or agreed to in writing, software   distributed under the License is distributed on an "AS IS" BASIS,   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   See the License for the specific language governing permissions and   limitations under the License.*/-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quote_category"
            android:icon="@drawable/ic_library"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_quotes"
            android:icon="@drawable/ic_quotation_mark"
            android:title="@string/Quotes" />
        <item
            android:id="@+id/nav_wallpapers"
            android:icon="@drawable/ic_collection"
            android:title="@string/Wallpaper" />
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_image_black_24dp"
            android:title="@string/collections" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/Fav" />
        <item
            android:id="@+id/nav_works"
            android:icon="@drawable/ic_edit_black"
            android:title="@string/Work" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/writetous" />
    </group>
</menu>
