<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <group>
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="1"
            android:title="@string/action_settings"
            android:visible="false"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/action_Pro_features"
            android:orderInCategory="2"
            android:title="@string/beta"

            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/action_Pro_about"
            android:orderInCategory="2"
            android:title="@string/about"

            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/action_Pro_credits"
            android:orderInCategory="2"
            android:title="@string/credits_menu"

            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/action_Pro_write"
            android:orderInCategory="2"
            android:title="@string/writetous"

            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/action_Pro_rate"
            android:orderInCategory="2"
            android:title="@string/rate_us"

            app:showAsAction="collapseActionView" />
    </group>


</menu>
