<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/root_Lo"
    android:background="@drawable/rounded_rect"
    android:clipToPadding="true">
    <TextView
        android:id="@+id/head_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/project"
        android:textSize="@dimen/font2"
        android:textStyle="italic"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/et_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect"
        android:padding="16dp"
        android:layout_margin="@dimen/elevation8"
        android:textAlignment="textStart"
        android:textColor="@color/textColor"
        android:hint="project name"
        android:textColorHint="@color/colorPrimary1"
        android:layout_marginTop="10dp"/>
    <RadioGroup
        android:id="@+id/rd_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        >
        <RadioButton
            android:id="@+id/rb_jpeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jpg"
            android:textColor="@color/colorAccent"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_png"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/png"
            android:textColor="@color/colorAccent"/>
    </RadioGroup>
    <Button
        android:id="@+id/remove_watermark_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/watermark"
        android:background="@drawable/rounded_rect"
        android:layout_margin="4dp"
        android:textColor="@color/textColor"
        android:textAllCaps="false"/>

    <LinearLayout
        android:id="@+id/bt_ll_watch_Ad_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >
        <Button
            android:id="@+id/bt_watch_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorAccent"
            android:text="@string/WatchAd"
            android:layout_margin="4dp"/>
        <Button
            android:id="@+id/bt_buy_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorAccent"
            android:text="@string/pro"
            android:layout_margin="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bt_ll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >
        <Button
            android:id="@+id/bt_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel"
            android:layout_margin="4dp"/>
        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorAccent"
            android:text="@string/save"
            android:layout_margin="4dp"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/bannerAdId"
        ads:layout_anchorGravity="bottom">

    </com.google.android.gms.ads.AdView>
</LinearLayout>